k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
  labels:
    tier: backend
    app: employee-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        tier: backend
        app: employee-backend
    spec:
      containers:
        - name: employee-backend
          image: nginx
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "500Mi"
