k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend-service
  labels:
    app: employee-backend
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: employee-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
