k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend-service
  labels:
    app: employee-frontend
    tier: frontend
spec:
  type: NodePort
  selector:
    app: employee-frontend
  ports:
    - port: 443
      targetPort: 443
      nodePort: 31234
      name: https
