k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-mgmt-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: azuredev.employee-mgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-frontend-service
            port: 
              number: 80
  - host: azuredns.employee-mgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-backend-service
            port: 
              number: 80
  tls:
  - hosts:
      - azure.employee-mgmt.com
    secretName: azure-employee-mgmt-secret
  - hosts:
      - azuredns.employee-mgmt.com
    secretName: azuredns-employee-mgmt-secret
